Fix drawer button padding on iOS

--- a/css/ot_drawer.css
+++ b/css/ot_drawer.css
@@ -89,6 +89,7 @@
     cursor: pointer ;
     height: 50px;
     width: 50px;
+    padding: 0;
     background-color: transparent;
     border: none;
     font-size: 30px;
